# 3-in-a-row-game

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  build.bat  build.cmd  compile.cmd  test.cmd  windowsProj.sln
src/: CMakeLists.txt  main.cpp
src/functions/: CmakeLists.txt  sum_function.cpp  sum_function.h
src/helpers/: CMakeLists.txt  helpers.cpp  helpers.h
src/window/: CMakeLists.txt  window.cpp  window.h
tests/: CMakeLists.txt  tests.cpp
windowsProj/: CMakeLists.txt  main.cpp  windowsProj.vcxproj
